# Trinity-RFT

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_zh.md  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yaml  release.yaml  sphinx-doc.yaml  unittest.yaml
_modules/: functools.html  index.html
_sources/: index.rst.txt  main.md.txt
_sources/build_api/: trinity.algorithm.add_strategy.rst.txt  trinity.algorithm.advantage_fn.rst.txt  trinity.algorithm.entropy_loss_fn.rst.txt  trinity.algorithm.kl_fn.rst.txt  trinity.algorithm.policy_loss_fn.rst.txt  trinity.algorithm.rst.txt  trinity.algorithm.sample_strategy.rst.txt  trinity.buffer.reader.rst.txt  trinity.buffer.rst.txt  trinity.buffer.schema.rst.txt  trinity.buffer.writer.rst.txt  trinity.common.models.rst.txt  trinity.common.rewards.rst.txt  trinity.common.rst.txt  trinity.common.workflows.rst.txt  trinity.explorer.rst.txt  trinity.manager.config_registry.rst.txt  trinity.manager.rst.txt  trinity.plugins.rst.txt  trinity.rst.txt  trinity.trainer.rst.txt  trinity.trainer.verl.rst.txt  trinity.utils.rst.txt
_sources/tutorial/: example_react.md.txt  example_reasoning_basic.md.txt  trinity_configs.md.txt
benchmark/: README.md  bench.py
benchmark/config/: countdown-template.yaml  gsm8k-template.yaml
benchmark/scripts/: gen-countdown-data.py
build_api/: modules.html  trinity.algorithm.add_strategy.html  trinity.algorithm.advantage_fn.html  trinity.algorithm.entropy_loss_fn.html  trinity.algorithm.html  trinity.algorithm.kl_fn.html  trinity.algorithm.policy_loss_fn.html  trinity.algorithm.sample_strategy.html  trinity.buffer.html  trinity.buffer.reader.html  trinity.buffer.schema.html  trinity.buffer.writer.html  trinity.common.html  trinity.common.models.html  trinity.common.rewards.html  trinity.common.workflows.html  trinity.explorer.html  trinity.html  trinity.manager.config_registry.html  trinity.manager.html  trinity.plugins.html  trinity.trainer.html  trinity.trainer.verl.html  trinity.utils.html
docs/: README.md
docs/sphinx_doc/: Makefile  build_doc.sh
en/main/: .buildinfo  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
environments/: data.yaml  env_mapping.json  training.yaml
examples/RAFT_alfworld/: RAFT_alfworld_7B.yaml  RAFT_reflect_alfworld_7B.yaml  README.md  train_alfworld.yaml
examples/agentscope_tool_react/: README.md  agentscope_tool_react_dapo.yaml  agentscope_tool_react_gsm8k.yaml  agentscopev0_tool_react_dapo.yaml  agentscopev0_tool_react_gsm8k.yaml  agentscopev1_tool_react_dapo.yaml  train_react.yaml
examples/agentscope_websearch/: README.md  agentscopev1_websearch_agent.yaml  get_webwalkerQA_data.py
examples/asymre_gsm8k/: README.md  gsm8k.yaml
examples/asymre_math/: README.md  math.yaml  train_math.yaml
examples/async_gsm8k/: README.md  explorer.yaml  run.sh  trainer.yaml  verl_config.yaml
examples/cispo_gsm8k/: README.md  gsm8k.yaml
examples/dapo_math/: README.md  dapo.yaml  train_dapo.yaml
examples/dpo_human_in_the_loop/: README.md  dpo.yaml  train_dpo.yaml
examples/dpo_humanlike/: README.md  dpo.yaml  train_dpo.yaml
examples/grpo_alfworld/: README.md  alfworld.yaml  get_alfworld_data.py  train_alfworld.yaml
examples/grpo_alfworld_general_multi_step/: README.md  alfworld.yaml  train_alfworld.yaml
examples/grpo_email_search/: README.md  email_search.yaml  train_email_search.yaml
examples/grpo_gsm8k/: README.md  gsm8k.yaml  train_gsm8k.yaml
examples/grpo_gsm8k_experience_pipeline/: README.md  dj_scoring_exp.yaml  gsm8k.yaml
examples/grpo_gsm8k_ruler/: README.md  gsm8k_ruler.yaml  train_gsm8k_ruler.yaml
examples/grpo_gsm8k_task_pipeline/: README.md  gsm8k.yaml  train_gsm8k.yaml
examples/grpo_gsm8k_trainable_ruler/: README.md  gsm8k_ruler.yaml
examples/grpo_lora_gsm8k/: README.md  gsm8k.yaml
examples/grpo_math/: README.md  math.yaml  train_math.yaml
examples/grpo_sciworld/: README.md  get_sciworld_data.py  sciworld.yaml  train_sciworld.yaml
examples/grpo_toolcall/: README.md  get_toolace_data.py  toolace.yaml  train_toolace.yaml
examples/grpo_vlm/: README.md  train_vlm.yaml  vlm.yaml
examples/grpo_webshop/: README.md  get_webshop_data.py  train_webshop.yaml  webshop.yaml
examples/mix_chord/: README.md  get_openr1_data.py  mix_chord.yaml  train_mix_chord.yaml
examples/mix_math/: README.md  mix_math.yaml  train_mix_math.yaml
examples/opmd_gsm8k/: README.md  opmd_gsm8k.yaml  train_opmd_gsm8k.yaml
examples/opmd_math/: math.yaml  train_math.yaml
examples/ppo_countdown/: README.md  countdown.yaml  train_countdown.yaml
examples/ppo_countdown_megatron/: README.md  countdown.yaml  train_countdown.yaml
examples/rec_family/: G1.sh  G2.sh  G3.sh  G5.sh  README  run.sh
examples/rec_gsm8k/: README.md  gsm8k.yaml
examples/rec_math/: README.md  math.yaml  train_math.yaml
examples/reclip_gsm8k/: README.md  reclip_gsm8k.yaml  train_reclip_gsm8k.yaml
examples/sft_mot/: README.md  sft.yaml  train_sft.yaml
examples/sppo_gsm8k/: README.md  gsm8k.yaml  train_gsm8k.yaml
examples/topr_gsm8k/: README.md  gsm8k.yaml  train_gsm8k.yaml
main/: .buildinfo  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  main.doctree
main/_modules/: index.html
main/_sources/: index.rst.txt
scripts/: install.py  start_servers.py
tests/: tools.py  vllm_test.py
trinity/: __init__.py
tutorial/: example_async_mode.html  example_data_functionalities.html  example_dpo.html  example_mix_algo.html  example_multi_turn.html  example_react.html  example_reasoning_advanced.html  example_reasoning_basic.html  example_step_wise.html  faq.html  trinity_configs.html  trinity_programming_guide.html
(+1930 files in other folders)
